use negative top margins instead of negative bottom margins in flex columns to prevent convent overlap below flex container

--- a/app/assets/stylesheets/blocks/b-news_line-topic.sass
+++ b/app/assets/stylesheets/blocks/b-news_line-topic.sass
@@ -6,7 +6,7 @@
 @import mixins/two_line_ellipsis
 
 .b-news_line-topic
-  margin-bottom: 16px
+  margin-top: 16px
 
   & > a
     display: block
