--- a/app/assets/stylesheets/mixins/flex_column.scss
+++ b/app/assets/stylesheets/mixins/flex_column.scss
@@ -107,12 +107,12 @@
   // background: rgba(green, 0.5);
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: -$offset;
+  margin-top: -$offset;
   margin-left: -$gutter;
 
   & > #{$selector} {
     // background: rgba(blue, 0.5);
-    margin-bottom: $offset;
+    margin-top: $offset;
     margin-left: $gutter;
     @include fcolumn-size(1 / $columns, $gutter);
   }
